k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: nodejs
  ports:
  - protocol: TCP
    port: 60001
    targetPort: 3000
